CHANNELMGR-737 fix opensans font cutoff in list-items

--- a/channel-manager/frontend-ng/src/styles/_sidenav.scss
+++ b/channel-manager/frontend-ng/src/styles/_sidenav.scss
@@ -25,6 +25,11 @@
   background-color: $list-item-active-bgcolor;
 }
 
+// OpenSans fonts cut off at the 'g' with line-height 1.2 from Material
+.md-list-item-text h4 {
+  line-height: 1.3em !important;
+}
+
 .catalog-dd-container-item {
   cursor: move; // IE 11&edge
   cursor: grab;
